added HTML markup fot the grid setting section

--- a/index.html
+++ b/index.html
@@ -19,3 +19,18 @@
                     </div>
                 </fieldset>   
             </div>
+            <div class="grid-setting">
+                <div class="display-slider-value">
+                    <span class="slider-value"></span>
+                </div>
+                <div class="slider-wrapper">
+                    <button class="decrement-slider">-</button>
+                    <input type="range" value="16" max="100" min="5" class="range-slider">
+                    <button class="increment-slider">+</button>
+                </div>
+            </div>
+            <div class="reset">
+                <button class="reset-btn">reset</button>
+                <button class="erase">erase</button>
+            </div>    
+    </aside>
