added HTML markup for the sketch pad

--- a/index.html
+++ b/index.html
@@ -34,3 +34,7 @@
                 <button class="erase">erase</button>
             </div>    
     </aside>
+    <div class="right-panel">
+        <div class="parent"></div>
+
+    </div>
