--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Glory:wght@400;500;600;800&family=Lato:wght@400;700;900&family=Righteous&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Etch</title>
+</head>
+<body>
 <div class="wrapper">
-    <aside class="left-panel">
+    <header>
+        <div class="hero-text">
+            <h1>Sketch-Padi</h1>
+        </div>
+    </header>
+    <main>
+        <aside class="left-panel">
             <div class="color-setting">
                 <fieldset class="color-setting-heading">
                     <legend>Color Setting</legend>
@@ -36,5 +53,11 @@
     </aside>
     <div class="right-panel">
         <div class="parent"></div>
-
     </div>
+
+    </main>
+    
+</div>
+    <script src="app.js"></script>
+</body>
+</html>
