added the default grid functionality using the defaultGrid function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="slider-wrapper">
                         <button class="decrement-slider">-</button>
-                        <input type="range" value="16" max="100" min="5" class="range-slider">
+                        <input type="range" value="16" max="60" min="1" class="range-slider">
                         <button class="increment-slider">+</button>
                     </div>
                 </div>
@@ -59,6 +59,6 @@
     </main>
     
 </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
