modified sketch pad layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Glory:wght@400;500;600;800&family=Lato:wght@400;700;900&family=Righteous&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Etch</title>
@@ -18,7 +21,7 @@
     <main>
         <aside class="left-panel">
             <fieldset class="color-setting-heading">
-                <legend>Color Setting</legend>
+                <legend><i class="fas fa-cog fa-x2"></i> Settings </legend>
                 <div class="color-setting">
                         <div class="colors-schemes">
                             <span>choose a color scheme</span>
