added functionality to choose sketchpad color

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
                         <div class="colors-schemes">
                             <span>choose a color scheme</span>
                             <div class="choose-color">
-                                <label for="greyscale" class="greyscale">
-                                    <input type="radio" id="greyscale" name="color-scheme">Grayscale
+                                <!-- <label for="greyscale" class="greyscale">
+                                    <input type="radio" id="greyscale" name="color-scheme" value>Grayscale
                                 </label>
                                 <label for="random-colors" class="random-colors">Random color
                                     <input type="radio" id="random-colors" name="color-scheme">
-                                </label>
-                                <label for="color-picker" class="color-picker">color picker
-                                    <input type="color" id="" name="color-scheme">
-                                </label>
+                                </label> -->
+                                    <span>pick a color</span><input type="color" id="color-picker" name="color-sheme">
+                                    <button class="random">random</button>
+                                    <!-- <input type="color" id="color-picker" name="color-sheme"> -->
+                                
                             </div>
                         </div>   
                 </div>
@@ -50,7 +51,7 @@
                 </div>
                 <div class="reset">
                     <button class="reset-btn">reset</button>
-                    <button class="erase">erase</button>
+                    <button class="erase-btn">erase</button>
                 </div>    
             </fieldset>
             
