added media query to make app responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="color-tools">
                         <input data-tooltip="click to pick a color" type="color" id="color-picker" name="color-picker" class="color-tools-btn">
                         <label for="color-picker" class="color-picker-label">
-                            <i class="fas fa-palette fa-3x"></i>
+                            <i class="fas fa-palette"></i>
                             <span class="color-tools-text">pick a color</span>
                         </label>
                         <div class="random-color">
@@ -39,11 +39,6 @@
                             </div>
                             <span class="color-tools-text">random color</span>
                         </div>
-                        <!-- <button class="random color-tools-btn"> -->
-                            <!-- <i class="fas fa-tint fa-3x"></i> -->
-                            
-                        <!-- </button> -->
-                        <!-- <button class="erase-btn color-tools-btn">erase</button> -->
                         <div class="eraser">
                             <div class="erase-btn">
                                 <span></span>
