--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <div class="color-tools">
                         <input data-tooltip="click to pick a color" type="color" id="color-picker" name="color-picker" class="color-tools-btn">
                         <label for="color-picker" class="color-picker-label">
-                            <i class="fas fa-palette"></i>
-                            <span class="color-tools-text">pick a color</span>
+                            <i class="fas fa-palette hover"></i>
+                            <span class="color-tools-text hover">pick a color</span>
                         </label>
                         <div class="random-color">
                             <div class="random-icon">
